# WIFIBeaconCollector

./: CMakeLists.txt  README.md  collect_beacon_frames.py  package.xml
config/: several.rviz
scripts/: wlan_setup.sh
src/: CMakeLists.txt  collect_beacon_frames.py  collect_beacon_frames_node.py  fuser_node.py  setup.py
src/launch/: map_wifi_with_frobit.launch
src/msg/: Beacon.msg
src/scripts/: import_wifi_signals.m
